# doorbeen

./: .dockerignore  .envrc  .gitignore  Dockerfile  MANIFEST.in  README.md  __init__.py  docker-compose.yml  example.env  langgraph.json  main.py  pyproject.toml
.github/workflows/: main.yml
api/: __main__.py  main.py
api/docs/: main.py
api/routers/: __init__.py  agents.py  assistants.py  samples.py  validators.py
api/schemas/requests/: agents.py  assistants.py
api/schemas/response/: validators.py
api/utils/: cookies.py
api/utils/errors/: generate.py
api/utils/modifiers/: dictionaries.py
api/utils/sockets/: common.py
core/agents/: sql.py
core/assistants/analysis/: grades.py
core/assistants/hooks/: callback.py
core/assistants/toolkit/: sql.py
core/assistants/usage/: tracker.py
core/assistants/utils/: tool.py
core/commons/: parsers.py
core/commons/documents/: processor.py
core/config/: env_props.py  execution_env.py
core/database/: database.py
core/entities/: entity.py
core/events/: generator.py
core/exceptions/: SQLClients.py
core/glossary/: meaning.py
core/models/: invoker.py  model.py  provider.py
core/properties/: filters.py  history.py  property.py  statistics.py  values.py
core/types/: databases.py  enrich.py  execute.py  finalize.py  followups.py  generate.py  observe.py  outputs.py  sql_schema.py  visualize.py
core/users/: user.py
core/vectors/: vectorize.py
frontend/playground/: Dockerfile  amplify.yml  dist  example.env  formkit.config.ts  nuxt.config.ts  package.json  tailwind.config.js
(+120 files in other folders)
